--- a/index.html
+++ b/index.html
@@ -73,24 +73,22 @@
     const audio = document.querySelector('audio')
 
     // create song list
-    const songList = [
+      const songList = [
         {
             path: "HappyBirthday.mp3",
             songName: "HappyBirthday bố :))",
         },
         {
-            path: "CatBuiCuocDoi.mp3",
-            songName: "Cát bụi cuộc đời",
+            path: "BaNgonNen.mp3",
+            songName: "Ba nên lung linh",
         },  {
-            path: "DapMoCuocTinh.mp3",
-            songName: "Đắp mộ cuộc tình",
+            path: "CaNhaThuongNhau.mp3",
+            songName: "Cả nhà thương nhau",
         },  {
-            path: "NhoOi.mp3",
-            songName: "Nhỏ ơi",
-        },  {
-            path: "TinhSauThienThu.mp3",
-            songName: "Tình sầu thiên thu ",
-        },
+           
+            path: "OngXaEm.mp3",
+            songName: "Ông xã em number one",
+        }, 
     ];
 
     let song_Playing = false;
