--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For my father</title>
+    <title>For my farther</title>
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
@@ -73,7 +73,7 @@
     const audio = document.querySelector('audio')
 
     // create song list
-      const songList = [
+    const songList = [
         {
             path: "HappyBirthday.mp3",
             songName: "HappyBirthday bố :))",
@@ -84,7 +84,13 @@
         },  {
             path: "CaNhaThuongNhau.mp3",
             songName: "Cả nhà thương nhau",
-        },  {
+        },
+            {
+               
+               path: "BaiCaTuoiTre.mp3",
+               songName: "Bài ca tuổi trẻ",
+           }, 
+        {
            
             path: "OngXaEm.mp3",
             songName: "Ông xã em number one",
